--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>Disle | Design Agency HTML Template | Home Page 02</title>
+	<title>adveromedia | Marketing Agency</title>
 	<!-- Stylesheets -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet">
@@ -228,7 +228,7 @@
 					<div class="content-column col-lg-6 col-md-12 order-2 wow fadeInRight">
 						<div class="inner-column">
 							<div class="sec-title">
-								<span class="sub-title">Welcome to disle</span>
+								<span class="sub-title">Welcome to adveromedia</span>
 								<h2 class="title">Introducing Quality Digital Agency.</h2>
 								<h4 class="other-title">The professional approach to development.</h4>
 								<div class="text"> There are many variations of simply free text passages of available
