--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="utf-8">
-	<title>adveromedia | Marketing Agency</title>
+	<title> ADVERO Media | Marketing Agency</title>
 	<!-- Stylesheets -->
 	<link href="assets/css/bootstrap.min.css" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet">
@@ -38,12 +38,10 @@
 						</ul>
 					</div>
 
-					<div class="top-right">
-						<ul class="useful-links">
-							<li><a href="#">Help</a></li>
-							<li><a href="#">Support</a></li>
-							<li><a href="#">Contact</a></li>
-						</ul>
+					<div class="top-right mx-3">
+						<!-- <ul class="useful-links"> 
+							<li><a href="#"></a></li>
+						</ul> -->
 						<ul class="social-icon-one">
 							<li><a href="#"><span class="fab fa-twitter"></span></a></li>
 							<li><a href="#"><span class="fab fa-facebook-square"></span></a></li>
@@ -84,12 +82,7 @@
 							<i class="icon flaticon-phone-ringing"></i>
 							+962 7 7059 6387
 						</a>
-
-						<!-- Header Search -->
-						<button class="ui-btn ui-btn search-btn">
-							<span class="icon lnr lnr-icon-search"></span>
-						</button>
-
+ 
 						<a href="#" class="theme-btn btn-style-one dark-bg"><span class="btn-title">Get a
 								quote</span></a>
 
@@ -766,7 +759,7 @@
 						<!-- Footer COlumn -->
 						<div class="footer-column col-xl-3 col-lg-3 col-md-6 col-sm-12">
 							<div class="footer-widget about-widget">
-								<h5 class="widget-title"><img src="assets/images/logo/logo.webp" alt=""></h5>
+								<h5 class="widget-title"><img src="assets/images/logo/footer-logo.webp" class="footer-logo" alt=""></h5>
 								<div class="widget-content">
 									<div class="text">We work with a passion of taking challenges and creating new ones
 										in advertising sector.</div>
@@ -838,17 +831,14 @@
 			<!--  Footer Bottom -->
 			<div class="footer-bottom">
 				<div class="auto-container">
-					<div class="row">
-						<div class="logo-column col-lg-4 col-md-4 order-2">
-							<div class="footer-logo"></div>
-						</div>
-						<div class="links-column col-lg-4 col-md-4 order-3">
+					<div class="row"> 
+						<div class="links-column col-lg-4 col-md-4 col-sm-12 order-1">
 							<ul class="footer-links">
 								<li><a href="#">Terms of Use</a></li>
 								<li><a href="#">Privacy Policy</a></li>
 							</ul>
 						</div>
-						<div class="col-lg-4 col-md-4">
+						<div class="col-lg-8 col-md-8 col-sm-12">
 							<p class="copyright-text">© Copyright 2023 by Advero Media Powerd by <a href="dhntechno.net">DhnTechno</a> </p>
 						</div>
 					</div>
